--- a/src/pages/admin-carta-home/admin-carta-home.html
+++ b/src/pages/admin-carta-home/admin-carta-home.html
@@ -17,6 +17,10 @@
 
 
 <ion-content class="" padding>
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+    
     <ion-fab left bottom>
         <button ion-fab color="light"><ion-icon name="arrow-dropright"></ion-icon></button>
         <ion-fab-list side="right">
