--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -1,5 +1,4 @@
 <ion-header>
-
     <ion-navbar class="borde" hideBackButton>
         <ion-row>
             <ion-col col-1>
@@ -43,6 +42,10 @@
 </ion-header>
 
 <ion-content class="">
+    
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
 
     <div align="center">
         <img src="../assets/imgs/logo-11.png" alt="">
