--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
@@ -25,6 +25,10 @@
 
 <ion-content>
 
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+
     <ion-row>
         <ion-col col-1></ion-col>
         <ion-col>
