--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -26,6 +26,10 @@
 </ion-header>
 <ion-content>
 
+  <ion-fab right top>
+    <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+</ion-fab>
+
   <br>
 
   <ion-row>
