--- a/src/pages/admin-user-user/admin-user-user.html
+++ b/src/pages/admin-user-user/admin-user-user.html
@@ -24,6 +24,10 @@
 
 <ion-content class="">
 
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+
     <div align="center">
         <img src="../assets/imgs/logo-negro.png" alt="">
 
