--- a/src/pages/admin-users-list/admin-users-list.html
+++ b/src/pages/admin-users-list/admin-users-list.html
@@ -24,6 +24,11 @@
 
 
 <ion-content>
+  
+  <ion-fab right top>
+    <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+</ion-fab>
+
     <div class="centrar">
         <ion-row>
             <ion-col class="text-center">
