--- a/src/pages/administrar-reservaciones/administrar-reservaciones.html
+++ b/src/pages/administrar-reservaciones/administrar-reservaciones.html
@@ -23,6 +23,10 @@
 
 <ion-content style="background-color: white;" padding>
 
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+
     <div>
         <label for="">
             <font style="opacity: .6;">ACEPTADO / RESERVACIONES ENTRANTES</font>
