--- a/src/pages/admin-carta-subir/admin-evento-subir.html
+++ b/src/pages/admin-carta-subir/admin-evento-subir.html
@@ -17,6 +17,10 @@
 </ion-header>
 
 <ion-content class="" padding>
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+    
     <div >
         <div style="text-align: center">
 
