--- a/src/pages/admin-evento-edit/admin-evento-edit.html
+++ b/src/pages/admin-evento-edit/admin-evento-edit.html
@@ -32,6 +32,10 @@
 </ion-header>
 
 <ion-content padding>
+    
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
 
     <ion-row>
         <ion-col col-1></ion-col>
