--- a/src/pages/admin-evento-subir/admin-evento-subir.html
+++ b/src/pages/admin-evento-subir/admin-evento-subir.html
@@ -40,6 +40,10 @@
 
 <ion-content padding>
 
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="cerrar_modal()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+
     <ion-row>
         <ion-col col-1></ion-col>
         <ion-col>
