--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -358,7 +358,7 @@
                 </div>
             </ion-col>
 
-            <ion-col>
+            <!-- <ion-col>
                 <div>
                     <ion-row>
                         <ion-col col-1></ion-col>
@@ -372,7 +372,7 @@
                         </ion-col>
                     </ion-row>
                 </div>
-            </ion-col>
+            </ion-col> -->
 
 
 
