--- a/src/pages/admin-reservaciones-curso/admin-reservaciones-curso.html
+++ b/src/pages/admin-reservaciones-curso/admin-reservaciones-curso.html
@@ -25,6 +25,10 @@
 
 <ion-content>
 
+    <ion-fab right top>
+        <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
+    </ion-fab>
+
     <br><br><br><br>
     <!-- <ion-searchbar [animated]="true" (ionInput)="getItems($event)"></ion-searchbar> -->
 
