--- a/src/pages/admin-reservaciones-curso/admin-reservaciones-curso.html
+++ b/src/pages/admin-reservaciones-curso/admin-reservaciones-curso.html
@@ -29,69 +29,68 @@
         <button ion-fab color="primary" (click)="behind()"><ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon></button>
     </ion-fab>
 
+    <ion-row>
+        <ion-col col-1></ion-col>
+        <ion-col>
+            <p class="lugar">
+                Reservaciones en curso
+                <br>
+                <img src="./assets/content/line-hori.png" style="width: 40%;" alt="">
+            </p>
+            <p class="descrip">
+                Sucursal
+            </p>
+        </ion-col>
+        <ion-col col-1></ion-col>
+    </ion-row>
+
     <br><br><br><br>
     <!-- <ion-searchbar [animated]="true" (ionInput)="getItems($event)"></ion-searchbar> -->
 
-    <div *ngIf="reservaciones.length == 1">
-        <ion-row>
-            <ion-col col-1></ion-col>
-            <ion-col>
-                <ion-card class="descripcion">
-                    <br>
-                    <ion-list *ngIf="reservaciones.length != 0">
-                        <ion-item *ngFor="let reservacion of reservaciones" class="descripcion" no-lines>
+    <div *ngIf="reservaciones.length >= 1">
 
-                            <ion-row>
-                                <ion-col col-3>
-                                    <div *ngFor="let event of infoEvento">
-                                        <div *ngIf="event.uid == reservacion.idevento">
-                                            <img [src]="event.img" class="imgEvent">
-                                            <p class="tituloE">{{event.titulo}}</p>
-                                        </div>
-                                    </div>
-                                </ion-col>
-                                <ion-col col-1>
-                                    <img src="./assets/content/line3.png" class="imgL" alt="">
-                                </ion-col>
-                                <ion-col col-6>
-                                    <ng-container *ngFor="let cliente of clientes">
-                                        <h2 *ngIf="cliente.uid == reservacion.idUsuario">{{ cliente.displayName }} </h2>
-                                    </ng-container>
-                                    <p class="fechaR">Fecha {{ reservacion.fechaR}} </p>
-                                    <button ion-button class="btnDetalle" round
-                                        (click)="goDetalle(reservacion.idReservacion)">
-                                        Detalle
-                                    </button>
-                                </ion-col>
-                                <ion-col col-2>
-                                    <p class="hora">{{ reservacion.hora }} </p>
-                                    <p style="margin-top: 5px;"></p>
-                                    <div align="center"><img src="./assets/content/Ellipse55.png" class="imgElli"
-                                            alt=""></div>
-                                    <p style="margin-top: 5px;"></p>
-                                    <!-- <p class="status">STATUS </p> -->
-                                    <p class="aceptado" *ngIf="reservacion.estatus == 'Pagando'">Pagada </p>
-                                </ion-col>
-                            </ion-row>
-                            <!-- <ion-avatar item-start>
-                            <img src="../assets/imgs/icons/book.png">
-                        </ion-avatar>
-                        <ng-container *ngFor="let cliente of clientes">
-                            <h2 *ngIf="cliente.uid == reservacion.idUsuario">{{ cliente.displayName }} </h2>
-                        </ng-container>
-                        <p>Folio: {{ reservacion.folio}} </p>
-                        <p *ngIf="reservacion.estatus == 'Pagando'"> Pagada </p>
-                        <p>{{ reservacion.fechaR}} </p>
-                        <ion-note item-end>{{ reservacion.hora }} </ion-note>
-                        <button ion-button color="dark" round (click)="goDetalle(reservacion.idReservacion)">
-                            Detalle
-                        </button> -->
-                        </ion-item>
-                    </ion-list>
-                </ion-card>
-            </ion-col>
-            <ion-col col-1></ion-col>
-        </ion-row>
+        <ion-item *ngFor="let reservacion of reservaciones">
+
+            <ion-avatar item-start>
+
+                <img src="{{ (reservacion.idUsuario | getNameUser | async)?.photoURL }}">
+
+            </ion-avatar>
+
+             <h2 style="text-transform: uppercase"> <ion-icon ios="ios-contact" md="md-contact" item-start style="color: #fcc04d"></ion-icon> Nombre: <b>{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b> </h2>
+
+            <h3>
+                <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d"></ion-icon>  Fecha: <b> {{ reservacion.fechaR | date: 'dd/MM/yyyy' }} </b> 
+            </h3>
+
+            <p class="hora">
+                <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon>Hora de reservación: <b> {{ reservacion.hora }} </b>
+            </p>
+            <p class="hora" item-end>
+                <img src="./assets/content/Ellipse55.png" class="imgElli" alt=""> {{ reservacion.estatus == 'Pagando' ? 'Pagado' : 'Otro' }} 
+            </p>
+
+            <ng-container *ngIf="reservacion.idevento != null">
+
+                <ng-container *ngFor="let event of infoEvento">
+
+                    <ng-container *ngIf="reservacion.idevento == event.uid">
+
+                        <p class="hora"> <ion-icon ios="ios-beer" md="md-beer" item-start style="color: #fcc04d"></ion-icon> {{ event.titulo }} </p>
+
+                    </ng-container>
+
+                </ng-container>
+
+            </ng-container>
+
+            <!-- <button ion-button block round class="btnDetalle" (click)="goDetalle(reservacion.idReservacion)">
+
+                Detalle
+
+            </button> -->
+
+        </ion-item>
     </div>
 
 
