Campos de hora y fecha en evento

--- a/src/pages/admin-evento-edit/admin-evento-edit.html
+++ b/src/pages/admin-evento-edit/admin-evento-edit.html
@@ -95,37 +95,20 @@
 
         <ion-item>
             <ion-label>Fecha</ion-label>
-            <ion-input type="date" class="letra" [(ngModel)]="_cap.selectedEventoItem.fecha"></ion-input>
+            <ion-datetime item-end displayFormat="DD/MM/YYYY" [(ngModel)]="_cap.selectedEventoItem.fecha" name="fecha" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="date" class="letra" [(ngModel)]="_cap.selectedEventoItem.fecha"></ion-input> -->
         </ion-item>
 
         <ion-item>
             <ion-label>Hora inicio</ion-label>
-            <ion-input type="time" class="letra" [(ngModel)]="_cap.selectedEventoItem.hora"></ion-input>
+            <ion-datetime item-end displayFormat="hh:mm a" minuteValues="0,30" [(ngModel)]="_cap.selectedEventoItem.hora"name="hora" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="time" class="letra" [(ngModel)]="_cap.selectedEventoItem.hora"></ion-input> -->
         </ion-item>
         <ion-item>
             <ion-label>Hora fin</ion-label>
-            <ion-input type="time" class="letra" [(ngModel)]="_cap.selectedEventoItem.hora_fin"></ion-input>
+            <ion-datetime item-end displayFormat="hh:mm a" minuteValues="0,30" [(ngModel)]="_cap.selectedEventoItem.hora_fin" name="hora_fin" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="time" class="letra" [(ngModel)]="_cap.selectedEventoItem.hora_fin"></ion-input> -->
         </ion-item>
-
-        <!--<ion-item>
-            <ion-label>Categoría</ion-label>
-            <ion-select [(ngModel)]="_cap.selectedEventoItem.categoria">
-                <ion-option value="Deportivo">Deportivo</ion-option>
-                <ion-option value="Cultural">Cultural</ion-option>
-                <ion-option value="Académico">Académico</ion-option>
-                <ion-option value="Recreativo">Recreativo</ion-option>
-                <ion-option value="Social">Social</ion-option>
-                <ion-option value="Festival">Festival</ion-option>
-                <ion-option value="Homenaje">Homenaje</ion-option>
-                <ion-option value="Reconocimiento">Reconocimiento</ion-option>
-                <ion-option value="Feria">Feria</ion-option>
-                <ion-option value="Cumpleaños">Cumpleaños</ion-option>
-                <ion-option value="Familiy">Familiy Day</ion-option>
-                <ion-option value="Simposio">Simposio</ion-option>
-                <ion-option value="Otro">Otro</ion-option>
-            </ion-select>
-        </ion-item>-->
-
         <ion-item>
             <ion-label floating>Lugar</ion-label>
             <ion-input type="text" class="letra" [(ngModel)]="_cap.selectedEventoItem.lugar"></ion-input>
@@ -137,7 +120,7 @@
                     autocorrect="on"></ion-textarea>
             </ion-item> -->
             <ion-item class="fond">
-                <ion-textarea class="fond" placeholder="Descripción" [(ngModel)]="obs" name="obs" autocomplete="on"
+                <ion-textarea class="fond" placeholder="Descripción" [(ngModel)]="_cap.selectedEventoItem.obs" name="obs" autocomplete="on"
                 autocorrect="on"></ion-textarea>
             </ion-item>
         </ion-card>
