--- a/src/pages/admin-evento-subir/admin-evento-subir.html
+++ b/src/pages/admin-evento-subir/admin-evento-subir.html
@@ -75,44 +75,32 @@
     <ion-list>
 
         <ion-item no-lines>
-            <ion-label floating>Titulo</ion-label>
+            <ion-label stacked >Titulo</ion-label>
             <ion-input type="text" class="letra" [(ngModel)]="titulo"></ion-input>
         </ion-item>
         <ion-item>
-            <ion-label>Fecha </ion-label>
-            <ion-input type="date" class="letra" [(ngModel)]="fecha"></ion-input>
+            <ion-label stacked>Fecha </ion-label>
+            <ion-datetime item-end displayFormat="DD/MM/YYYY" [(ngModel)]="fecha" name="fecha" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="date" class="letra" [(ngModel)]="fecha"></ion-input> -->
+        </ion-item>
+
+        <ion-item>
+            <ion-label stacked>Hora inicio</ion-label>
+
+            <ion-datetime item-end displayFormat="hh:mm a" minuteValues="0,30" [(ngModel)]="hora"name="hora" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="time" class="letra" [(ngModel)]="hora"></ion-input> -->
         </ion-item>
         <ion-item>
-            <ion-label>Hora inicio</ion-label>
-            <ion-input type="time" class="letra" [(ngModel)]="hora"></ion-input>
+            <ion-label stacked>Hora fin</ion-label>
+            <ion-datetime item-end displayFormat="hh:mm a" minuteValues="0,30" [(ngModel)]="hora_fin" name="hora_fin" doneText="Aceptar" cancelText="Cancelar"></ion-datetime>
+            <!-- <ion-input type="time" class="letra" [(ngModel)]="hora_fin"></ion-input> -->
         </ion-item>
-        <ion-item>
-            <ion-label>Hora fin</ion-label>
-            <ion-input type="time" class="letra" [(ngModel)]="hora_fin"></ion-input>
-        </ion-item>
-        <!--<ion-item>
-            <ion-label>Categoría <ion-icon name="md-arrow-dropdown" style="color: #FD9530;"></ion-icon>
-            </ion-label>
-            <ion-select [(ngModel)]="categoria">
-                <ion-option value="Deportivo">Deportivo</ion-option>
-                <ion-option value="Cultural">Cultural</ion-option>
-                <ion-option value="Académico">Académico</ion-option>
-                <ion-option value="Recreativo">Recreativo</ion-option>
-                <ion-option value="Social">Social</ion-option>
-                <ion-option value="Festival">Festival</ion-option>
-                <ion-option value="Homenaje">Homenaje</ion-option>
-                <ion-option value="Reconocimiento">Reconocimiento</ion-option>
-                <ion-option value="Feria">Feria</ion-option>
-                <ion-option value="Cumpleaños">Cumpleaños</ion-option>
-                <ion-option value="Familiy">Familiy Day</ion-option>
-                <ion-option value="Simposio">Simposio</ion-option>
-                <ion-option value="Otro">Otro</ion-option>
-            </ion-select>
-        </ion-item>-->
+
         <ion-item>
             <ion-label>Lugar</ion-label>
             <ion-input type="text" class="letra" [(ngModel)]="lugar"></ion-input>
         </ion-item>
+        
         <ion-card class="cardDes">
             <ion-item class="fond" no-lines>
                 <ion-textarea class="fond" placeholder="Descripción" [(ngModel)]="obs" name="obs" autocomplete="on" autocorrect="on"></ion-textarea>
