--- a/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
+++ b/src/pages/admin-reservacion-detalle/admin-reservacion-detalle.html
@@ -3,8 +3,8 @@
   <ion-navbar class="borde" hideBackButton>
     <ion-row>
       <ion-col col-1 align="center">
-        <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white">
-        </ion-icon>
+        <!-- <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white">
+        </ion-icon> -->
       </ion-col>
 
 
