--- a/src/pages/admin-rp-codigo/admin-rp-codigo.html
+++ b/src/pages/admin-rp-codigo/admin-rp-codigo.html
@@ -1,16 +1,16 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton>
     <ion-title>Código del día</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <!-- <ion-fab right top>
+  <ion-fab right top>
     <button ion-fab color="primary" (click)="behind()">
       <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="color: #000000"></ion-icon>
     </button>
-  </ion-fab> -->
+  </ion-fab>
 
   <ng-container *ngIf="this.tpye == 'rp'">
 
