--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar class="borde">
+    <ion-navbar class="borde" hideBackButton>
         <ion-row>
             <ion-col col-1 align="center">
                 <img src="./assets/content/line2.png" class="imgLi" alt="">
