--- a/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.html
+++ b/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.html
@@ -2,7 +2,7 @@
     <ion-navbar hideBackButton>
         <ion-row>
             <ion-col col-1>
-                <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon>
+                <!-- <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon> -->
             </ion-col>
             <ion-col col-8>
                 <ion-title>Historial de reservaciones</ion-title>
