--- a/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
+++ b/src/pages/admin-monitear-reserv/admin-monitear-reserv.html
@@ -3,8 +3,8 @@
     <ion-navbar class="borde" hideBackButton>
         <ion-row>
             <ion-col col-1>
-                <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon>
-                  </ion-col>
+                <!-- <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon> -->
+            </ion-col>
 
             <ion-col col-1 align="center">
                 <img src="./assets/content/line2.png" class="imgLi" alt="">
